--- a/ClearMine.Logic/ClearMine.Logic.csproj
+++ b/ClearMine.Logic/ClearMine.Logic.csproj
@@ -18,7 +18,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -50,7 +50,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -82,6 +82,7 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="Microsoft.CSharp" />
@@ -89,14 +90,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CellState.cs" />
-    <Compile Include="CellStateChangedEventArgs.cs" />
     <Compile Include="ClearMineGame.cs" />
-    <Compile Include="ExpandFailedException.cs" />
-    <Compile Include="GameState.cs" />
-    <Compile Include="IClearMine.cs" />
-    <Compile Include="IClearMineContracts.cs" />
-    <Compile Include="MineCell.cs" />
     <Compile Include="MinesGenerator.cs" />
     <Compile Include="MinesGrid.cs" />
     <Compile Include="MinesGridConverter.cs" />
