--- a/ClearMine.Framework/ClearMine.Framework.csproj
+++ b/ClearMine.Framework/ClearMine.Framework.csproj
@@ -97,6 +97,7 @@
   <ItemGroup>
     <Compile Include="Behaviors\SortableListViewBehavior.cs" />
     <Compile Include="Commands\CommandsHelper.cs" />
+    <Compile Include="Commands\GameCommands.cs" />
     <Compile Include="Commands\OptionsCommands.cs" />
     <Compile Include="Commands\StatisticsCommands.cs" />
     <Compile Include="Controls\ElectronicNumber.cs" />
@@ -109,6 +110,7 @@
     <Compile Include="Converters\DifficultyToBooleanConverter.cs" />
     <Compile Include="Converters\LightUpsToBooleanConverter.cs" />
     <Compile Include="Converters\MathOperationConverter.cs" />
+    <Compile Include="Converters\ObjectToVisibilityConverter.cs" />
     <Compile Include="Dialogs\OptionDialog.cs" />
     <Compile Include="Media\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
