1. Support animation for OptionDialog 2. Implements a draft of GameRecorder
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@87 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Framework/ClearMine.Framework.csproj
+++ b/ClearMine.Framework/ClearMine.Framework.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Commands\GameCommands.cs" />
     <Compile Include="Commands\OptionsCommands.cs" />
     <Compile Include="Commands\StatisticsCommands.cs" />
+    <Compile Include="Controls\AutoTransformPanel.cs" />
     <Compile Include="Controls\ElectronicNumber.cs" />
     <Compile Include="Controls\ListSortDecorator.cs" />
     <Compile Include="Controls\MineCellControl.cs" />
