--- a/ClearMine.Framework/ClearMine.Framework.csproj
+++ b/ClearMine.Framework/ClearMine.Framework.csproj
@@ -130,6 +130,10 @@
       <Project>{A2631FA1-E4A4-41AC-8E8E-5C8AEB63C83E}</Project>
       <Name>ClearMine.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ClearMine.Effects\ClearMine.Effects.csproj">
+      <Project>{1FD89229-5F29-4093-9B7F-6F8E09BADF7C}</Project>
+      <Name>ClearMine.Effects</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
