Refine the flag waving effect.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@89 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Framework/ClearMine.Framework.csproj
+++ b/ClearMine.Framework/ClearMine.Framework.csproj
@@ -95,6 +95,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Behaviors\AnimateEffectBehavior.cs" />
     <Compile Include="Behaviors\SortableListViewBehavior.cs" />
     <Compile Include="Commands\CommandsHelper.cs" />
     <Compile Include="Commands\GameCommands.cs" />
