Fix a few FxCop warnings.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@90 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Common/ClearMine.Common.csproj
+++ b/ClearMine.Common/ClearMine.Common.csproj
@@ -114,8 +114,8 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Utilities\GenericExtension.cs" />
-    <Compile Include="Utilities\Util.cs" />
-    <Compile Include="Utilities\Win32.cs" />
+    <Compile Include="Utilities\Infrastructure.cs" />
+    <Compile Include="Utilities\WindowsApi.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\Settings.settings">
