1. Remove Code Contract. 2. Support language switching.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@91 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Common/ClearMine.Common.csproj
+++ b/ClearMine.Common/ClearMine.Common.csproj
@@ -104,7 +104,6 @@
     <Compile Include="Logic\ExpandFailedException.cs" />
     <Compile Include="Logic\GameState.cs" />
     <Compile Include="Logic\IClearMine.cs" />
-    <Compile Include="Logic\IClearMineContracts.cs" />
     <Compile Include="Logic\MineCell.cs" />
     <Compile Include="Log\RedirectorTraceListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -123,6 +122,12 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ClearMine.Localization\ClearMine.Localization.csproj">
+      <Project>{71C67E90-41FD-457E-B155-1EBE7396024A}</Project>
+      <Name>ClearMine.Localization</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
