--- a/ClearMine.Localization/ClearMine.Localization.csproj
+++ b/ClearMine.Localization/ClearMine.Localization.csproj
@@ -5,13 +5,16 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{3D129E1B-FED1-4C73-99B7-8E497CCA19A0}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{71C67E90-41FD-457E-B155-1EBE7396024A}</ProjectGuid>
+    <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClearMine.VM</RootNamespace>
-    <AssemblyName>ClearMine.VM</AssemblyName>
+    <RootNamespace>ClearMine.Localization</RootNamespace>
+    <AssemblyName>ClearMine.Localization</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
+    <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,46 +34,34 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="System" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xaml">
+      <RequiredTargetFramework>4.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xaml" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClearMineViewModel.cs" />
-    <Compile Include="Commands\GameCommandBindings.cs" />
-    <Compile Include="GameWonDetailsViewModel.cs" />
-    <Compile Include="GameWonViewModel.cs" />
-    <Compile Include="OptionsViewModel.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Records\GameRecorder.cs" />
-    <Compile Include="StatisticsViewModel.cs" />
+    <Compile Include="LocalizationHelper.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ClearMine.Common\ClearMine.Common.csproj">
-      <Project>{A2631FA1-E4A4-41AC-8E8E-5C8AEB63C83E}</Project>
-      <Name>ClearMine.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ClearMine.Dialogs\ClearMine.Dialogs.csproj">
-      <Project>{FFB181E2-DF4F-4332-8AE9-3BE561C26CA5}</Project>
-      <Name>ClearMine.Dialogs</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ClearMine.Framework\ClearMine.Framework.csproj">
-      <Project>{730AFF67-B857-42CD-9DAF-E94FC79BA721}</Project>
-      <Name>ClearMine.Framework</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ClearMine.Localization\ClearMine.Localization.csproj">
-      <Project>{71C67E90-41FD-457E-B155-1EBE7396024A}</Project>
-      <Name>ClearMine.Localization</Name>
-    </ProjectReference>
+    <Page Include="en-US\Overall.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="zh-CN\Overall.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
