--- a/ClearMine.VM/ClearMine.VM.csproj
+++ b/ClearMine.VM/ClearMine.VM.csproj
@@ -44,6 +44,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Behaviors\MainInteractionBehavior.cs" />
     <Compile Include="ClearMineViewModel.cs" />
     <Compile Include="Commands\GameCommandBindings.cs" />
     <Compile Include="GameWonDetailsViewModel.cs" />
