--- a/ClearMine.Framework/ClearMine.Framework.csproj
+++ b/ClearMine.Framework/ClearMine.Framework.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Converters\DifficultyToBooleanConverter.cs" />
     <Compile Include="Converters\LightUpsToBooleanConverter.cs" />
     <Compile Include="Converters\ObjectToVisibilityConverter.cs" />
+    <Compile Include="Converters\PlaygroundBorderThicknessConverter.cs" />
     <Compile Include="Dialogs\ExceptionBox.xaml.cs">
       <DependentUpon>ExceptionBox.xaml</DependentUpon>
     </Compile>
