Move magic string to Application Settings or refactoring by lambda.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@95 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Common/Properties/Settings.settings
+++ b/ClearMine.Common/Properties/Settings.settings
@@ -53,5 +53,32 @@
     <Setting Name="GameHistoryFolder" Type="System.String" Scope="User">
       <Value Profile="(Default)">.</Value>
     </Setting>
+    <Setting Name="SoundLose" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">.\Sound\Lose.wma</Value>
+    </Setting>
+    <Setting Name="SoundWin" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">.\Sound\Win.wma</Value>
+    </Setting>
+    <Setting Name="SoundStart" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">.\Sound\GameStart.wma</Value>
+    </Setting>
+    <Setting Name="SoundTileSingle" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">.\Sound\TileSingle.wma</Value>
+    </Setting>
+    <Setting Name="SoundTileMultiple" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">.\Sound\TileMultiple.wma</Value>
+    </Setting>
+    <Setting Name="SavedGameExt" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">.cmg</Value>
+    </Setting>
+    <Setting Name="UnfinishedGameFileName" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">SavedGame.cmg</Value>
+    </Setting>
+    <Setting Name="ScreenShotFolder" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">\Poleaf\ClearMine\ScreenShoots\</Value>
+    </Setting>
+    <Setting Name="ScreenShotFileTimeFormat" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">yy-MM-dd-HH-mm-ss</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
