1. Localize Trace Message. 2. Add Waving Flag Setting.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@97 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Common/Properties/Settings.settings
+++ b/ClearMine.Common/Properties/Settings.settings
@@ -80,5 +80,11 @@
     <Setting Name="ScreenShotFileTimeFormat" Type="System.String" Scope="Application">
       <Value Profile="(Default)">yy-MM-dd-HH-mm-ss</Value>
     </Setting>
+    <Setting Name="FeedBackEmail" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">nankezhishi@hotmail.com</Value>
+    </Setting>
+    <Setting Name="WavingFlag" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
