--- a/ClearMine.Common/app.config
+++ b/ClearMine.Common/app.config
@@ -22,25 +22,6 @@
             <setting name="Mines" serializeAs="String">
                 <value>10</value>
             </setting>
-            <setting name="HeroList" serializeAs="Xml">
-                <value>
-                    <heroList xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <heroOnLevel level="beginner" played="0" won="0" longestWinning="0"
-                            longestLosing="0" current="0" average="0">
-                            <records />
-                        </heroOnLevel>
-                        <heroOnLevel level="interMediate" played="0" won="0" longestWinning="0"
-                            longestLosing="0" current="0" average="0">
-                            <records />
-                        </heroOnLevel>
-                        <heroOnLevel level="advanced" played="0" won="0" longestWinning="0"
-                            longestLosing="0" current="0" average="0">
-                            <records />
-                        </heroOnLevel>
-                    </heroList>
-                </value>
-            </setting>
             <setting name="PlaySound" serializeAs="String">
                 <value>True</value>
             </setting>
@@ -64,6 +45,9 @@
             </setting>
             <setting name="GameHistoryFolder" serializeAs="String">
                 <value>.</value>
+            </setting>
+            <setting name="WavingFlag" serializeAs="String">
+                <value>False</value>
             </setting>
         </ClearMine.Common.Properties.Settings>
     </userSettings>
@@ -95,6 +79,9 @@
             </setting>
             <setting name="ScreenShotFileTimeFormat" serializeAs="String">
                 <value>yy-MM-dd-HH-mm-ss</value>
+            </setting>
+            <setting name="FeedBackEmail" serializeAs="String">
+                <value>nankezhishi@hotmail.com</value>
             </setting>
         </ClearMine.Common.Properties.Settings>
     </applicationSettings>
