--- a/ClearMine.Common/Properties/Settings.settings
+++ b/ClearMine.Common/Properties/Settings.settings
@@ -86,5 +86,8 @@
     <Setting Name="WavingFlag" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="HelpDocumentName" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">ClearMineHelp.chm</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
