--- a/ClearMine.Common/ClearMine.Common.csproj
+++ b/ClearMine.Common/ClearMine.Common.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Logic\GameState.cs" />
     <Compile Include="Logic\IClearMine.cs" />
     <Compile Include="Logic\MineCell.cs" />
+    <Compile Include="Logic\PressState.cs" />
     <Compile Include="Log\RedirectorTraceListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
