--- a/ClearMine.Effects/ClearMine.Effects.csproj
+++ b/ClearMine.Effects/ClearMine.Effects.csproj
@@ -50,6 +50,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MonoEffect.cs" />
     <Compile Include="WaveEffect.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -62,6 +63,9 @@
       <Project>{71C67E90-41FD-457E-B155-1EBE7396024A}</Project>
       <Name>ClearMine.Localization</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Effect Include="ShaderSource\Mono.fx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EffectCompile" Condition="'@(Effect)' != '' ">
