1. Add Installer. 2. Remove useless configuration file in Common project. 3. Move TraceListener class to utilities name space.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@101 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Common/ClearMine.Common.csproj
+++ b/ClearMine.Common/ClearMine.Common.csproj
@@ -106,7 +106,7 @@
     <Compile Include="Logic\IClearMine.cs" />
     <Compile Include="Logic\MineCell.cs" />
     <Compile Include="Logic\PressState.cs" />
-    <Compile Include="Log\RedirectorTraceListener.cs" />
+    <Compile Include="Utilities\RedirectorTraceListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <DependentUpon>Settings.settings</DependentUpon>
@@ -119,7 +119,6 @@
     <Compile Include="Utilities\WindowsApi.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -132,6 +131,7 @@
       <Name>ClearMine.Localization</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
