--- a/ClearMine/app.config
+++ b/ClearMine/app.config
@@ -4,6 +4,9 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="ClearMine.Common.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="ClearMine.Common.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <userSettings>
         <ClearMine.Common.Properties.Settings>
@@ -62,13 +65,53 @@
             <setting name="GameHistoryFolder" serializeAs="String">
                 <value>.</value>
             </setting>
+            <setting name="WavingFlag" serializeAs="String">
+                <value>False</value>
+            </setting>
         </ClearMine.Common.Properties.Settings>
     </userSettings>
+    <applicationSettings>
+        <ClearMine.Common.Properties.Settings>
+            <setting name="SoundLose" serializeAs="String">
+                <value>.\Sound\Lose.wma</value>
+            </setting>
+            <setting name="SoundWin" serializeAs="String">
+                <value>.\Sound\Win.wma</value>
+            </setting>
+            <setting name="SoundStart" serializeAs="String">
+                <value>.\Sound\GameStart.wma</value>
+            </setting>
+            <setting name="SoundTileSingle" serializeAs="String">
+                <value>.\Sound\TileSingle.wma</value>
+            </setting>
+            <setting name="SoundTileMultiple" serializeAs="String">
+                <value>.\Sound\TileMultiple.wma</value>
+            </setting>
+            <setting name="SavedGameExt" serializeAs="String">
+                <value>.cmg</value>
+            </setting>
+            <setting name="UnfinishedGameFileName" serializeAs="String">
+                <value>SavedGame.cmg</value>
+            </setting>
+            <setting name="ScreenShotFolder" serializeAs="String">
+                <value>\Poleaf\ClearMine\ScreenShoots\</value>
+            </setting>
+            <setting name="ScreenShotFileTimeFormat" serializeAs="String">
+                <value>yy-MM-dd-HH-mm-ss</value>
+            </setting>
+            <setting name="FeedBackEmail" serializeAs="String">
+                <value>nankezhishi@hotmail.com</value>
+            </setting>
+            <setting name="HelpDocumentName" serializeAs="String">
+                <value>ClearMineHelp.chm</value>
+            </setting>
+        </ClearMine.Common.Properties.Settings>
+    </applicationSettings>
     <system.diagnostics>
         <trace autoflush="true">
             <listeners>
                 <add name="redirectListener"
-                     type="ClearMine.Common.Log.RedirectorTraceListener, ClearMine.Common"
+                     type="ClearMine.Common.Utilities.RedirectorTraceListener, ClearMine.Common"
                      traceOutputOptions="DateTime" />
             </listeners>
         </trace>
