Support auto update check mark when change language.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@104 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Framework/ClearMine.Framework.csproj
+++ b/ClearMine.Framework/ClearMine.Framework.csproj
@@ -96,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Behaviors\AnimateEffectBehavior.cs" />
+    <Compile Include="Behaviors\AutoCheckMenuItemsBehavior.cs" />
     <Compile Include="Behaviors\SortableListViewBehavior.cs" />
     <Compile Include="Commands\CommandsHelper.cs" />
     <Compile Include="Commands\GameCommands.cs" />
