建立消息机制并使用反射将ClearMine.VM与ClearMine.Dialog解耦合。
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@135 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Framework/ClearMine.Framework.csproj
+++ b/ClearMine.Framework/ClearMine.Framework.csproj
@@ -118,6 +118,7 @@
       <DependentUpon>ExceptionBox.xaml</DependentUpon>
     </Compile>
     <Compile Include="Dialogs\OptionDialog.cs" />
+    <Compile Include="Dialogs\ShowDialogMessage.cs" />
     <Compile Include="Interactivity\Behavior.cs" />
     <Compile Include="Interactivity\BehaviorCollection.cs" />
     <Compile Include="Interactivity\Interaction.cs" />
