--- a/ClearMine.Common/ClearMine.Common.csproj
+++ b/ClearMine.Common/ClearMine.Common.csproj
@@ -107,6 +107,9 @@
     <Compile Include="Logic\IMinesGenerator.cs" />
     <Compile Include="Logic\MineCell.cs" />
     <Compile Include="Logic\PressState.cs" />
+    <Compile Include="Messaging\MessageAggregator.cs" />
+    <Compile Include="Messaging\MessageBase.cs" />
+    <Compile Include="Messaging\MessageManager.cs" />
     <Compile Include="Utilities\RedirectorTraceListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
