--- a/ClearMine.Effects/ClearMine.Effects.csproj
+++ b/ClearMine.Effects/ClearMine.Effects.csproj
@@ -59,9 +59,9 @@
     <Effect Include="ShaderSource\Wave.fx" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ClearMine.Localization\ClearMine.Localization.csproj">
-      <Project>{71C67E90-41FD-457E-B155-1EBE7396024A}</Project>
-      <Name>ClearMine.Localization</Name>
+    <ProjectReference Include="..\ClearMine.Common\ClearMine.Common.csproj">
+      <Project>{A2631FA1-E4A4-41AC-8E8E-5C8AEB63C83E}</Project>
+      <Name>ClearMine.Common</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
