--- a/ClearMine.Framework/ClearMine.Framework.csproj
+++ b/ClearMine.Framework/ClearMine.Framework.csproj
@@ -117,8 +117,11 @@
     <Compile Include="Dialogs\ExceptionBox.xaml.cs">
       <DependentUpon>ExceptionBox.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Dialogs\ExceptionMessage.cs" />
+    <Compile Include="Dialogs\ExceptionMessageProcessor.cs" />
     <Compile Include="Dialogs\OptionDialog.cs" />
     <Compile Include="Dialogs\ShowDialogMessage.cs" />
+    <Compile Include="FrameworkModule.cs" />
     <Compile Include="Interactivity\Behavior.cs" />
     <Compile Include="Interactivity\BehaviorCollection.cs" />
     <Compile Include="Interactivity\Interaction.cs" />
@@ -142,10 +145,6 @@
     <ProjectReference Include="..\ClearMine.Common\ClearMine.Common.csproj">
       <Project>{A2631FA1-E4A4-41AC-8E8E-5C8AEB63C83E}</Project>
       <Name>ClearMine.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ClearMine.Effects\ClearMine.Effects.csproj">
-      <Project>{1FD89229-5F29-4093-9B7F-6F8E09BADF7C}</Project>
-      <Name>ClearMine.Effects</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
